--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,30 @@
 .center {
   position: absolute;
-  border: 20px;
-  top: 40%;
-  left: 40%;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 20px;
+  top: 35%;
+  left: 37%;
 }
 
 @keyframes background {
-  0%   { background-color: #3366ff }
-  25%  { background-color: #669999 }
-  50%  { background-color: #ccff99 }
-  75%  { background-color: #993333 }
-  100% { background-color: #0099cc }
+  0%   { background-color: #ffffff }
+  25%  { background-color: #c5d3c8 }
+  50%  { background-color: #c5d3d0 }
+  75%  { background-color: #c5d0d3 }
+  100% { background-color: #c8c5d3 }
+}
+
+#audio-canvas {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+}
+
+#on-off-button {
+  border-radius: 5px;
+}
+
+#button-container {
+  margin-top: 5px;
 }
